--- a/3.optimal_cluster_bgmm.ipynb
+++ b/3.optimal_cluster_bgmm.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
        "(18110, 12)"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,165 +179,9 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>alpha</th>\n",
-       "      <th>N</th>\n",
-       "      <th>True_N</th>\n",
-       "      <th>converged</th>\n",
-       "      <th>loglik</th>\n",
-       "      <th>conv</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0.5</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>True</td>\n",
-       "      <td>-3.574194</td>\n",
-       "      <td>yes</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0.5</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>True</td>\n",
-       "      <td>1.487019</td>\n",
-       "      <td>yes</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0.5</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
-       "      <td>True</td>\n",
-       "      <td>3.324341</td>\n",
-       "      <td>yes</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0.5</td>\n",
-       "      <td>5</td>\n",
-       "      <td>5</td>\n",
-       "      <td>True</td>\n",
-       "      <td>4.440903</td>\n",
-       "      <td>yes</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0.5</td>\n",
-       "      <td>6</td>\n",
-       "      <td>6</td>\n",
-       "      <td>True</td>\n",
-       "      <td>7.187918</td>\n",
-       "      <td>yes</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>589</th>\n",
-       "      <td>1000.0</td>\n",
-       "      <td>96</td>\n",
-       "      <td>26</td>\n",
-       "      <td>False</td>\n",
-       "      <td>11.013477</td>\n",
-       "      <td>no</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>590</th>\n",
-       "      <td>1000.0</td>\n",
-       "      <td>97</td>\n",
-       "      <td>26</td>\n",
-       "      <td>False</td>\n",
-       "      <td>11.013326</td>\n",
-       "      <td>no</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>591</th>\n",
-       "      <td>1000.0</td>\n",
-       "      <td>98</td>\n",
-       "      <td>26</td>\n",
-       "      <td>False</td>\n",
-       "      <td>11.011141</td>\n",
-       "      <td>no</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>592</th>\n",
-       "      <td>1000.0</td>\n",
-       "      <td>99</td>\n",
-       "      <td>26</td>\n",
-       "      <td>False</td>\n",
-       "      <td>11.011141</td>\n",
-       "      <td>no</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>593</th>\n",
-       "      <td>1000.0</td>\n",
-       "      <td>100</td>\n",
-       "      <td>28</td>\n",
-       "      <td>False</td>\n",
-       "      <td>11.011048</td>\n",
-       "      <td>no</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>594 rows × 6 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      alpha    N  True_N  converged     loglik conv\n",
-       "0       0.5    2       2       True  -3.574194  yes\n",
-       "1       0.5    3       3       True   1.487019  yes\n",
-       "2       0.5    4       4       True   3.324341  yes\n",
-       "3       0.5    5       5       True   4.440903  yes\n",
-       "4       0.5    6       6       True   7.187918  yes\n",
-       "..      ...  ...     ...        ...        ...  ...\n",
-       "589  1000.0   96      26      False  11.013477   no\n",
-       "590  1000.0   97      26      False  11.013326   no\n",
-       "591  1000.0   98      26      False  11.011141   no\n",
-       "592  1000.0   99      26      False  11.011141   no\n",
-       "593  1000.0  100      28      False  11.011048   no\n",
-       "\n",
-       "[594 rows x 6 columns]"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "result"
+    "pickle.dump(result, open('results/bgmm_results.pkl', 'wb'))"
    ]
   },
   {
