Name change, and requirements text

--- a/1.raw_data_creator.ipynb
+++ b/1.raw_data_creator.ipynb
@@ -820,13 +820,13 @@
    "outputs": [],
    "source": [
     "# # drop redundant cols and save as train\n",
-    "# nem_data = nem_data.drop(columns = energy_list)#.to_pickle('data/nem_train.pkl')\n",
+    "# nem_data = nem_data.drop(columns = energy_list)#.to_pickle('data/nem_formatted_data.pkl')\n",
     "# nem_data = nem_data.drop(columns = ['total', 'totalg','import','export', 'export_per'])\n",
     "nem_data.columns = ['state', 'datetime', 'bagasse', 'batterys', 'blackcoal',\n",
     "       'browncoal', 'diesel', 'gas', 'hydro', 'kerosene', 'solar', 'solar_rooftop', 'wind',\n",
     "       'demand', 'rrp', 'year', 'net_import', 'export']\n",
     "\n",
-    "nem_data.to_pickle('data/nem_train.pkl')"
+    "nem_data.to_pickle('data/nem_formatted_data.pkl')"
    ]
   },
   {
