--- a/3.optimal_cluster_bgmm.ipynb
+++ b/3.optimal_cluster_bgmm.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_pickle('data/nem_train.pkl')\n",
+    "df = pd.read_pickle('data/nem_formatted_data.pkl')\n",
     "df = df.sort_values(['state', 'datetime'])\n",
     "\n",
     "# Remove 1st Oct 2020 as the data is not complete\n",
